# kcmod

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
kcmod/: CMakeLists.txt
kcmod/include/kcmod/: aarch64.h  common.h  core_foundation.h  debug.h  fixup_chain.h  hooks.h  kernelcache.h  kext.h  log.h  macho.h  memio.h  plist.h  split_seg.h  symidx.h  temp.h
kcmod/src/: aarch64.cpp  fixup_chain.cpp  hooks.cpp  kernelcache.cpp  kext.cpp  main.cpp  plist.cpp  split_seg.cpp  symidx.cpp  temp.cpp
kext/: CMakeLists.txt  macros.cmake
kext/example_kext/: CMakeLists.txt  Info.plist  README.md  hooks.c  info.c  main.c
kext/libs/: CMakeLists.txt
kext/libs/kcmod_hooks/: CMakeLists.txt
kext/libs/kcmod_hooks/include/kcmod/: kcmod.h
xcode_sdk/: CMakeLists.txt
